# todo

./: .dockerignore  .gitignore  Cargo.toml  Compose.yaml  Dockerfile  LICENCE  LICENSE  README.md  rustfmt.toml
.cargo/: config.toml
.github/workflows/: rust.yaml
migrations/: 0001_create_table.sql
src/: macros.rs  main.rs  preludes.rs
src/pkg/: conf.rs  mod.rs
src/pkg/handlers/: error.rs  mod.rs  ping.rs  todo.rs
src/pkg/models/: todo.rs
src/pkg/repository/: error.rs  mod.rs
src/pkg/repository/crud/: create.rs  delete.rs  get.rs  mod.rs  update.rs
src/pkg/repository/manager/: mod.rs
src/pkg/repository/models/: todo.rs
src/pkg/router/: cors.rs  mod.rs  tracing.rs
src/pkg/server/: mod.rs
src/pkg/state/: mod.rs
